category feature implemented
