# src/models/category.model.js
@@ -1,0 +1,12 @@
+import mongoose from "mongoose";
+
+const categorySchema = new mongoose.Schema(
+  {
+    name: { type: String, required: true },
+    description: { type: String, required: true },
+  },
+  { timestamps: true }
+);
+
+const categoryModel = mongoose.model("Category", categorySchema);
+export default categoryModel;
