# src/models/product.model.js
@@ -1,0 +1,35 @@
+import mongoose from "mongoose";
+
+const productSchema = new mongoose.Schema(
+  {
+    name: {
+      type: String,
+      required: true,
+    },
+    description: {
+      type: String,
+      required: true,
+    },
+    price: {
+      type: Number,
+      required: true,
+    },
+    category: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Category",
+      required: true,
+    },
+    stock: {
+      type: Number,
+      required: true,
+    },
+    productImage: {
+      type: [String],
+      required: true,
+    },
+  },
+  { timestamps: true }
+);
+
+const productModel = mongoose.model("Product", productSchema);
+export default productModel;
