# src/server.js
@@ -1,9 +1,9 @@
 import express from "express";
 import dotenv from "dotenv";
-import swaggerJSDoc from "swagger-jsdoc";
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
 import userRoutes from "./routes/user.route.js";
+import categoryRoutes from "./routes/category.route.js";
 
 import connectDB from "./config/db.js";
 
@@ -20,24 +20,9 @@ app.get("/health", (req, res) => {
 });
 
 app.use(userRoutes);
+app.use(categoryRoutes);
 
 // Swagger setup
-// const swaggerOptions = {
-//   definition: {
-//     openapi: "3.0.0",
-//     info: {
-//       title: "E-commerce API",
-//       version: "1.0.0",
-//       description: "Express API documentation for E-commerce platform",
-//     },
-//   },
-//   apis: ["./src/routes/**/*.js"], // Path to the API docs
-// };
-
-// const swaggerSpec = swaggerJSDoc(swaggerOptions);
-// app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerSpec));
-
-// Load Swagger YAML
 const swaggerDocument = YAML.load("src/swagger.yaml");
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
